v2/MetadataParser.output
Grammar

    0 $accept: LVM_METADATA $end

    1 LVM_METADATA: PARAMETERS VOLUME_GROUP
    2             | VOLUME_GROUP PARAMETERS

    3 VOLUME_GROUP: TOKEN_NAME "{" PARAMETERS VOLUME_GROUP_SECTIONS "}"

    4 VOLUME_GROUP_SECTIONS: PHYSICAL_VOLUME_SECTION LOGICAL_VOLUME_SECTION
    5                      | LOGICAL_VOLUME_SECTION PHYSICAL_VOLUME_SECTION
    6                      | PHYSICAL_VOLUME_SECTION

    7 PHYSICAL_VOLUME_SECTION: "physical_volumes" "{" SUB_SECTIONS_LIST "}"

    8 LOGICAL_VOLUME_SECTION: "logical_volumes" "{" LOGICAL_VOLUMES_LIST "}"

    9 LOGICAL_VOLUMES_LIST: LOGICAL_VOLUME LOGICAL_VOLUMES_LIST
   10                     | LOGICAL_VOLUME

   11 LOGICAL_VOLUME: TOKEN_NAME "{" PARAMETERS SUB_SECTIONS_LIST "}"

   12 SUB_SECTIONS_LIST: SUB_SECTIONS_LIST SUB_SECTION
   13                  | SUB_SECTION

   14 SUB_SECTION: TOKEN_NAME "{" PARAMETERS "}"

   15 PARAMETERS: PARAMETERS PARAMETER
   16           | PARAMETER

   17 PARAMETER: TOKEN_NAME "=" VALUE

   18 VALUE: TOKEN_INT_VALUE
   19      | TOKEN_FLOAT_VALUE
   20      | TOKEN_STRING_VALUE
   21      | ARRAY
   22      | PAIR

   23 ARRAY: "[" STRING_LIST "]"
   24      | "[" "]"

   25 STRING_LIST: TOKEN_STRING_VALUE "," STRING_LIST
   26            | TOKEN_STRING_VALUE

   27 PAIR: "[" TOKEN_STRING_VALUE "," TOKEN_INT_VALUE "]"


Terminals, with rules where they appear

$end (0) 0
error (256)
TOKEN_INT_VALUE (258) 18 27
TOKEN_FLOAT_VALUE (259) 19
TOKEN_STRING_VALUE (260) 20 25 26 27
TOKEN_NAME (261) 3 11 14 17
"physical_volumes" (262) 7
"logical_volumes" (263) 8
"[" (264) 23 24 27
"]" (265) 23 24 27
"{" (266) 3 7 8 11 14
"}" (267) 3 7 8 11 14
"=" (268) 17
"," (269) 25 27


Nonterminals, with rules where they appear

$accept (15)
    on left: 0
LVM_METADATA (16)
    on left: 1 2, on right: 0
VOLUME_GROUP (17)
    on left: 3, on right: 1 2
VOLUME_GROUP_SECTIONS (18)
    on left: 4 5 6, on right: 3
PHYSICAL_VOLUME_SECTION (19)
    on left: 7, on right: 4 5 6
LOGICAL_VOLUME_SECTION (20)
    on left: 8, on right: 4 5
LOGICAL_VOLUMES_LIST (21)
    on left: 9 10, on right: 8 9
LOGICAL_VOLUME (22)
    on left: 11, on right: 9 10
SUB_SECTIONS_LIST (23)
    on left: 12 13, on right: 7 11 12
SUB_SECTION (24)
    on left: 14, on right: 12 13
PARAMETERS (25)
    on left: 15 16, on right: 1 2 3 11 14 15
PARAMETER (26)
    on left: 17, on right: 15 16
VALUE (27)
    on left: 18 19 20 21 22, on right: 17
ARRAY (28)
    on left: 23 24, on right: 21
STRING_LIST (29)
    on left: 25 26, on right: 23 25
PAIR (30)
    on left: 27, on right: 22


State 0

    0 $accept: . LVM_METADATA $end

    TOKEN_NAME  shift, and go to state 1

    LVM_METADATA  go to state 2
    VOLUME_GROUP  go to state 3
    PARAMETERS    go to state 4
    PARAMETER     go to state 5


State 1

    3 VOLUME_GROUP: TOKEN_NAME . "{" PARAMETERS VOLUME_GROUP_SECTIONS "}"
   17 PARAMETER: TOKEN_NAME . "=" VALUE

    "{"  shift, and go to state 6
    "="  shift, and go to state 7


State 2

    0 $accept: LVM_METADATA . $end

    $end  shift, and go to state 8


State 3

    2 LVM_METADATA: VOLUME_GROUP . PARAMETERS

    TOKEN_NAME  shift, and go to state 9

    PARAMETERS  go to state 10
    PARAMETER   go to state 5


State 4

    1 LVM_METADATA: PARAMETERS . VOLUME_GROUP
   15 PARAMETERS: PARAMETERS . PARAMETER

    TOKEN_NAME  shift, and go to state 1

    VOLUME_GROUP  go to state 11
    PARAMETER     go to state 12


State 5

   16 PARAMETERS: PARAMETER .

    $default  reduce using rule 16 (PARAMETERS)


State 6

    3 VOLUME_GROUP: TOKEN_NAME "{" . PARAMETERS VOLUME_GROUP_SECTIONS "}"

    TOKEN_NAME  shift, and go to state 9

    PARAMETERS  go to state 13
    PARAMETER   go to state 5


State 7

   17 PARAMETER: TOKEN_NAME "=" . VALUE

    TOKEN_INT_VALUE     shift, and go to state 14
    TOKEN_FLOAT_VALUE   shift, and go to state 15
    TOKEN_STRING_VALUE  shift, and go to state 16
    "["                 shift, and go to state 17

    VALUE  go to state 18
    ARRAY  go to state 19
    PAIR   go to state 20


State 8

    0 $accept: LVM_METADATA $end .

    $default  accept


State 9

   17 PARAMETER: TOKEN_NAME . "=" VALUE

    "="  shift, and go to state 7


State 10

    2 LVM_METADATA: VOLUME_GROUP PARAMETERS .
   15 PARAMETERS: PARAMETERS . PARAMETER

    TOKEN_NAME  shift, and go to state 9

    $default  reduce using rule 2 (LVM_METADATA)

    PARAMETER  go to state 12


State 11

    1 LVM_METADATA: PARAMETERS VOLUME_GROUP .

    $default  reduce using rule 1 (LVM_METADATA)


State 12

   15 PARAMETERS: PARAMETERS PARAMETER .

    $default  reduce using rule 15 (PARAMETERS)


State 13

    3 VOLUME_GROUP: TOKEN_NAME "{" PARAMETERS . VOLUME_GROUP_SECTIONS "}"
   15 PARAMETERS: PARAMETERS . PARAMETER

    TOKEN_NAME          shift, and go to state 9
    "physical_volumes"  shift, and go to state 21
    "logical_volumes"   shift, and go to state 22

    VOLUME_GROUP_SECTIONS    go to state 23
    PHYSICAL_VOLUME_SECTION  go to state 24
    LOGICAL_VOLUME_SECTION   go to state 25
    PARAMETER                go to state 12


State 14

   18 VALUE: TOKEN_INT_VALUE .

    $default  reduce using rule 18 (VALUE)


State 15

   19 VALUE: TOKEN_FLOAT_VALUE .

    $default  reduce using rule 19 (VALUE)


State 16

   20 VALUE: TOKEN_STRING_VALUE .

    $default  reduce using rule 20 (VALUE)


State 17

   23 ARRAY: "[" . STRING_LIST "]"
   24      | "[" . "]"
   27 PAIR: "[" . TOKEN_STRING_VALUE "," TOKEN_INT_VALUE "]"

    TOKEN_STRING_VALUE  shift, and go to state 26
    "]"                 shift, and go to state 27

    STRING_LIST  go to state 28


State 18

   17 PARAMETER: TOKEN_NAME "=" VALUE .

    $default  reduce using rule 17 (PARAMETER)


State 19

   21 VALUE: ARRAY .

    $default  reduce using rule 21 (VALUE)


State 20

   22 VALUE: PAIR .

    $default  reduce using rule 22 (VALUE)


State 21

    7 PHYSICAL_VOLUME_SECTION: "physical_volumes" . "{" SUB_SECTIONS_LIST "}"

    "{"  shift, and go to state 29


State 22

    8 LOGICAL_VOLUME_SECTION: "logical_volumes" . "{" LOGICAL_VOLUMES_LIST "}"

    "{"  shift, and go to state 30


State 23

    3 VOLUME_GROUP: TOKEN_NAME "{" PARAMETERS VOLUME_GROUP_SECTIONS . "}"

    "}"  shift, and go to state 31


State 24

    4 VOLUME_GROUP_SECTIONS: PHYSICAL_VOLUME_SECTION . LOGICAL_VOLUME_SECTION
    6                      | PHYSICAL_VOLUME_SECTION .

    "logical_volumes"  shift, and go to state 22

    $default  reduce using rule 6 (VOLUME_GROUP_SECTIONS)

    LOGICAL_VOLUME_SECTION  go to state 32


State 25

    5 VOLUME_GROUP_SECTIONS: LOGICAL_VOLUME_SECTION . PHYSICAL_VOLUME_SECTION

    "physical_volumes"  shift, and go to state 21

    PHYSICAL_VOLUME_SECTION  go to state 33


State 26

   25 STRING_LIST: TOKEN_STRING_VALUE . "," STRING_LIST
   26            | TOKEN_STRING_VALUE .
   27 PAIR: "[" TOKEN_STRING_VALUE . "," TOKEN_INT_VALUE "]"

    ","  shift, and go to state 34

    $default  reduce using rule 26 (STRING_LIST)


State 27

   24 ARRAY: "[" "]" .

    $default  reduce using rule 24 (ARRAY)


State 28

   23 ARRAY: "[" STRING_LIST . "]"

    "]"  shift, and go to state 35


State 29

    7 PHYSICAL_VOLUME_SECTION: "physical_volumes" "{" . SUB_SECTIONS_LIST "}"

    TOKEN_NAME  shift, and go to state 36

    SUB_SECTIONS_LIST  go to state 37
    SUB_SECTION        go to state 38


State 30

    8 LOGICAL_VOLUME_SECTION: "logical_volumes" "{" . LOGICAL_VOLUMES_LIST "}"

    TOKEN_NAME  shift, and go to state 39

    LOGICAL_VOLUMES_LIST  go to state 40
    LOGICAL_VOLUME        go to state 41


State 31

    3 VOLUME_GROUP: TOKEN_NAME "{" PARAMETERS VOLUME_GROUP_SECTIONS "}" .

    $default  reduce using rule 3 (VOLUME_GROUP)


State 32

    4 VOLUME_GROUP_SECTIONS: PHYSICAL_VOLUME_SECTION LOGICAL_VOLUME_SECTION .

    $default  reduce using rule 4 (VOLUME_GROUP_SECTIONS)


State 33

    5 VOLUME_GROUP_SECTIONS: LOGICAL_VOLUME_SECTION PHYSICAL_VOLUME_SECTION .

    $default  reduce using rule 5 (VOLUME_GROUP_SECTIONS)


State 34

   25 STRING_LIST: TOKEN_STRING_VALUE "," . STRING_LIST
   27 PAIR: "[" TOKEN_STRING_VALUE "," . TOKEN_INT_VALUE "]"

    TOKEN_INT_VALUE     shift, and go to state 42
    TOKEN_STRING_VALUE  shift, and go to state 43

    STRING_LIST  go to state 44


State 35

   23 ARRAY: "[" STRING_LIST "]" .

    $default  reduce using rule 23 (ARRAY)


State 36

   14 SUB_SECTION: TOKEN_NAME . "{" PARAMETERS "}"

    "{"  shift, and go to state 45


State 37

    7 PHYSICAL_VOLUME_SECTION: "physical_volumes" "{" SUB_SECTIONS_LIST . "}"
   12 SUB_SECTIONS_LIST: SUB_SECTIONS_LIST . SUB_SECTION

    TOKEN_NAME  shift, and go to state 36
    "}"         shift, and go to state 46

    SUB_SECTION  go to state 47


State 38

   13 SUB_SECTIONS_LIST: SUB_SECTION .

    $default  reduce using rule 13 (SUB_SECTIONS_LIST)


State 39

   11 LOGICAL_VOLUME: TOKEN_NAME . "{" PARAMETERS SUB_SECTIONS_LIST "}"

    "{"  shift, and go to state 48


State 40

    8 LOGICAL_VOLUME_SECTION: "logical_volumes" "{" LOGICAL_VOLUMES_LIST . "}"

    "}"  shift, and go to state 49


State 41

    9 LOGICAL_VOLUMES_LIST: LOGICAL_VOLUME . LOGICAL_VOLUMES_LIST
   10                     | LOGICAL_VOLUME .

    TOKEN_NAME  shift, and go to state 39

    $default  reduce using rule 10 (LOGICAL_VOLUMES_LIST)

    LOGICAL_VOLUMES_LIST  go to state 50
    LOGICAL_VOLUME        go to state 41


State 42

   27 PAIR: "[" TOKEN_STRING_VALUE "," TOKEN_INT_VALUE . "]"

    "]"  shift, and go to state 51


State 43

   25 STRING_LIST: TOKEN_STRING_VALUE . "," STRING_LIST
   26            | TOKEN_STRING_VALUE .

    ","  shift, and go to state 52

    $default  reduce using rule 26 (STRING_LIST)


State 44

   25 STRING_LIST: TOKEN_STRING_VALUE "," STRING_LIST .

    $default  reduce using rule 25 (STRING_LIST)


State 45

   14 SUB_SECTION: TOKEN_NAME "{" . PARAMETERS "}"

    TOKEN_NAME  shift, and go to state 9

    PARAMETERS  go to state 53
    PARAMETER   go to state 5


State 46

    7 PHYSICAL_VOLUME_SECTION: "physical_volumes" "{" SUB_SECTIONS_LIST "}" .

    $default  reduce using rule 7 (PHYSICAL_VOLUME_SECTION)


State 47

   12 SUB_SECTIONS_LIST: SUB_SECTIONS_LIST SUB_SECTION .

    $default  reduce using rule 12 (SUB_SECTIONS_LIST)


State 48

   11 LOGICAL_VOLUME: TOKEN_NAME "{" . PARAMETERS SUB_SECTIONS_LIST "}"

    TOKEN_NAME  shift, and go to state 9

    PARAMETERS  go to state 54
    PARAMETER   go to state 5


State 49

    8 LOGICAL_VOLUME_SECTION: "logical_volumes" "{" LOGICAL_VOLUMES_LIST "}" .

    $default  reduce using rule 8 (LOGICAL_VOLUME_SECTION)


State 50

    9 LOGICAL_VOLUMES_LIST: LOGICAL_VOLUME LOGICAL_VOLUMES_LIST .

    $default  reduce using rule 9 (LOGICAL_VOLUMES_LIST)


State 51

   27 PAIR: "[" TOKEN_STRING_VALUE "," TOKEN_INT_VALUE "]" .

    $default  reduce using rule 27 (PAIR)


State 52

   25 STRING_LIST: TOKEN_STRING_VALUE "," . STRING_LIST

    TOKEN_STRING_VALUE  shift, and go to state 43

    STRING_LIST  go to state 44


State 53

   14 SUB_SECTION: TOKEN_NAME "{" PARAMETERS . "}"
   15 PARAMETERS: PARAMETERS . PARAMETER

    TOKEN_NAME  shift, and go to state 9
    "}"         shift, and go to state 55

    PARAMETER  go to state 12


State 54

   11 LOGICAL_VOLUME: TOKEN_NAME "{" PARAMETERS . SUB_SECTIONS_LIST "}"
   15 PARAMETERS: PARAMETERS . PARAMETER

    TOKEN_NAME  shift, and go to state 56

    SUB_SECTIONS_LIST  go to state 57
    SUB_SECTION        go to state 38
    PARAMETER          go to state 12


State 55

   14 SUB_SECTION: TOKEN_NAME "{" PARAMETERS "}" .

    $default  reduce using rule 14 (SUB_SECTION)


State 56

   14 SUB_SECTION: TOKEN_NAME . "{" PARAMETERS "}"
   17 PARAMETER: TOKEN_NAME . "=" VALUE

    "{"  shift, and go to state 45
    "="  shift, and go to state 7


State 57

   11 LOGICAL_VOLUME: TOKEN_NAME "{" PARAMETERS SUB_SECTIONS_LIST . "}"
   12 SUB_SECTIONS_LIST: SUB_SECTIONS_LIST . SUB_SECTION

    TOKEN_NAME  shift, and go to state 36
    "}"         shift, and go to state 58

    SUB_SECTION  go to state 47


State 58

   11 LOGICAL_VOLUME: TOKEN_NAME "{" PARAMETERS SUB_SECTIONS_LIST "}" .

    $default  reduce using rule 11 (LOGICAL_VOLUME)
